# device-emulator

./: AUTHOR  CMakeLists.txt  README.md
cmake_modules/: log4cxxConfig.cmake
config/: log4cxx.xml
kernel/: CMakeLists.txt
kernel/include/Comms/: CommunicationChannel.h  CommunicationChannelSetup.h  TCPComms.h
kernel/include/Comms/TCP/: TCPClient.h  TCPConnection.h  TCPEndPoint.h  TCPServer.h
kernel/include/Data/: IMessage.h  Message.h
kernel/include/Device/: Device.h
kernel/include/Device/Behaviour/: DeviceBehaviour.h  IDeviceBehaviour.h
kernel/include/Device/Behaviour/States/: DeviceBehaviourState.h  ErrorState.h  FinishedState.h  IDeviceBehaviourState.h  NotStartedState.h  RunningState.h  StoppedState.h
kernel/include/Device/Orders/: IDeviceOrder.h  ReceiveOrder.h  SendOrder.h  WaitOrder.h
kernel/include/Log/: Logger.h
kernel/src/: main_ext.cpp
kernel/src/Comms/: CommunicationChannel.cpp  CommunicationChannel_ext.cpp  TCPComms.cpp
kernel/src/Comms/TCP/: TCPClient.cpp  TCPEndPoint.cpp  TCPServer.cpp
kernel/src/Data/: IMessage_ext.cpp  Message_ext.cpp
kernel/src/Device/: Device.cpp
kernel/src/Device/Behaviour/: DeviceBehaviour.cpp  DeviceBehaviour_ext.cpp
kernel/src/Device/Behaviour/States/: FinishedState.cpp  RunningState.cpp
kernel/src/Device/Orders/: InfiniteOrderList.cpp  Order_ext.cpp  Orders_ext.cpp  ReceiveOrder.cpp  SendOrder.cpp  WaitOrder.cpp
model/: CMakeLists.txt
model/include/: Common.h
model/include/Comms/: CommunicationChannel.h
model/include/Comms/TCP/: TCPClient.h  TCPClientSetup.h  TCPConnection.h  TCPEndPoint.h  TCPServer.h  TCPServerSetup.h
model/include/Device/Behaviour/: DeviceBehaviour.h
model/include/Device/Behaviour/States/: DeviceBehaviourState.h  NotStartedState.h
model/include/Device/Orders/: IDeviceOrder.h  IOrderList.h  InfiniteOrderList.h  OrderList.h  ReceiveOrder.h  SendOrder.h  WaitOrder.h
model/include/comms/: CommsFwd.h  CommunicationChannel.h
model/include/comms/tcp/: TCPClient.h  TCPConnection.h  TCPEndPoint.h  TCPServer.h
model/include/data/: DataFwd.h  IMessage.h  Message.h
model/include/device/: Device.h  DeviceFwd.h
model/include/device/behaviour/: DeviceBehaviour.h
model/include/device/behaviour/states/: DeviceBehaviourState.h  ErrorState.h  FinishedState.h  NotStartedState.h  RunningState.h  StoppedState.h
model/include/device/orders/: IDeviceOrder.h  IOrderList.h  InfiniteOrderList.h  OrderList.h  ReceiveOrder.h  SendOrder.h  WaitOrder.h
model/include/log/: Logger.h
model/src/: main_ext.cpp
model/src/Comms/: CommunicationChannel.cpp  CommunicationChannel_ext.cpp
model/src/Comms/TCP/: TCPClient.cpp  TCPEndPoint.cpp  TCPServer.cpp
model/src/Data/: Message.cpp
model/src/Device/: Device.cpp
model/src/Device/Behaviour/: DeviceBehaviour.cpp  DeviceBehaviour_ext.cpp
model/src/Device/Behaviour/States/: ErrorState.cpp  NotStartedState.cpp  RunningState.cpp  StoppedState.cpp
model/src/Device/Orders/: InfiniteOrderList.cpp  OrderList.cpp  Orders_ext.cpp  SendOrder.cpp
model/src/comms/: CommunicationChannel.cpp  CommunicationChannel_ext.cpp
model/src/comms/tcp/: TCPClient.cpp  TCPEndPoint.cpp  TCPServer.cpp
model/src/data/: Message.cpp  Message_ext.cpp
model/src/device/: Device.cpp  Device_ext.cpp
model/src/device/behaviour/: DeviceBehaviour.cpp  DeviceBehaviour_ext.cpp
model/src/device/behaviour/states/: ErrorState.cpp  FinishedState.cpp  NotStartedState.cpp  RunningState.cpp  StoppedState.cpp
model/src/device/orders/: InfiniteOrderList.cpp  OrderList.cpp  Orders_ext.cpp  ReceiveOrder.cpp  SendOrder.cpp  WaitOrder.cpp
test/: CMakeLists.txt  main.cpp
test/Mocks/: CommunicationChannelMock.h
test/src/: CommunicationChannelTest.cpp  DeviceBehaviourTest.cpp  InfiniteOrderListTest.cpp  MessageTest.cpp  OrderListTest.cpp  main.cpp
test/src/Comms/: CommunicationChannelTest.cpp
test/src/Comms/Mocks/: CommunicationChannelMock.h
test/src/Comms/TCP/: TCPCommsTest.cpp  TCPComms_ext.py
test/src/Data/: IMessage_ext.py
test/src/Device/: DeviceTest.cpp
test/src/Device/Behaviour/: DeviceBehaviourTest.cpp
test/src/Device/Orders/: InfiniteOrderListTest.cpp  OrderListTest.cpp  OrderList_ext.py
test/src/Device/States/: DeviceBehaviourState_ext.py
test/src/Mocks/: CommunicationChannelMock.h
test/src/comms/: CommunicationChannelTest.cpp
test/src/comms/mocks/: CommunicationChannelMock.h
test/src/comms/tcp/: TCPCommsTest.cpp
test/src/data/: IMessage_ext.py  MessageTest.cpp
test/src/device/: DeviceTest.cpp  device_ext.py
test/src/device/behaviour/: DeviceBehaviourTest.cpp
test/src/device/orders/: InfiniteOrderListTest.cpp  OrderListTest.cpp  order_list_ext.py
